    sometime in the future. Closes: #31634, #367712, #314462
    Thanks to Frank Lichtenheld.
  * Add '.gitignore' to the default dpkg-source -i regex. Closes: #409566
    Thanks to Julien Cristau.
  * Use l10n-friendlier strings to describe dependencies. Closes: #390916
    Thanks to Ian Jackson.
  * Change priority for dpkg-dev from standard to optional to match the
    override.

  [ Updated dpkg translations ]
  * Romanian (Eddy Petrișor).

 -- Guillem Jover <guillem@debian.org>  Tue,  9 Jan 2007 22:48:47 +0200

dpkg (1.13.25) unstable; urgency=low

  [ Guillem Jover ]
  * Fix year 2018 in changelog for Michael Alan Dorman's upload in 1998,
    which was confusing the changelog parsers. Closes: #402526
  * Document in its man page that update-alternatives requires cooperation
    from all packages dealing with the specific file. Closes: #396338
    Thanks to Tomas Pospisek <tpo_deb@sourcepole.ch>.
  * Require POSIX inside subprocerr in controllib.pl. Closes: #390636
    Thanks to Brendan O'Dea <bod@debian.org>.
  * Support extracting lzma compressed source and binary packages,
    and add a Suggests on package lzma. Closes: #347715
  * Add '/emul/ia32-linux' biarch paths to dpkg-shlibdeps. Closes: #403216
  * Remove non-modified /etc/dpkg/dpkg.cfg configuration file when upgrading
    from versions 1.9.21 through 1.10.28, to avoid getting prompted about
    conffile changes. Closes: #398061

  [ Updated dpkg translations ]
  * Chinese (Traditional, Asho Yeh).
  * Korean (Sunjae Park). Closes: #394135, #404938
  * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #391143
  * Nepali (Shiva Prasad Pokharel).
  * Romanian (Eddy Petri?or).
  * Catalan (Jordà Polo).
  * Swedish (Peter Karlsson).
  * Vietnamese (Clytie Siddall). Closes: #399343
  * Punjabi added (A S Alam).

  [ Updated dpkg-dev translations ]
  * Catalan (Jordi Mallach).

  [ Updated dselect translations ]
  * Korean (Sunjae Park). Closes: #404943
