@@ -28,6 +28,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     Thanks to Ian Jackson.
   * Change priority for dpkg-dev from standard to optional to match the
     override.
+  * Do not use a build-stamp in debian/rules.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
